--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "AirBnB calendar & price widget",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "server": "nodemon server/index.js",
+    "start": "webpack serve",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start-mongo": "brew services start mongodb-community@4.4",
+    "stop-mongo": "brew services stop mongodb-community@4.4",
+    "clear-mongo": "mongo airbnb --eval 'db.listing.drop()'"
   },
   "repository": {
     "type": "git",
@@ -15,5 +22,27 @@
   "bugs": {
     "url": "https://github.com/Johanna-Hard/carson-service/issues"
   },
-  "homepage": "https://github.com/Johanna-Hard/carson-service#readme"
+  "homepage": "https://github.com/Johanna-Hard/carson-service#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "faker": "^5.5.3",
+    "jquery": "^3.6.0",
+    "mongoose": "^5.12.6",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sequelize": "^6.6.2",
+    "styled-components": "^5.2.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.36.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
