--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "server": "nodemon server/index.js",
+    "server": "nodemon server/server_index.js",
     "start": "webpack serve",
     "build": "webpack",
     "watch": "webpack --watch",
+    "start-mysql": "mysql -u root < database/schema.sql",
     "start-mongo": "brew services start mongodb-community@4.4",
     "stop-mongo": "brew services stop mongodb-community@4.4",
     "clear-mongo": "mongo airbnb --eval 'db.listing.drop()'"
@@ -29,6 +30,7 @@
     "faker": "^5.5.3",
     "jquery": "^3.6.0",
     "mongoose": "^5.12.6",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
