--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AirBnB calendar & price widget",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "NODE_ENV=test jest --forceExit --detectOpenHandles --maxWorkers=1",
     "server": "nodemon server/server_index.js",
     "start": "webpack serve",
     "build": "webpack",
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "jquery": "^3.6.0",
@@ -36,14 +37,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sequelize": "^6.6.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.16",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "jest": "^26.6.3",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
