--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "react-build": "webpack",
     "react-dev": "webpack --mode development --watch",
     "server-dev": "nodemon server/index.js",
     "seed-db": "node database/seed.js"
@@ -14,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "mysql2": "^2.2.5",
+    "react-is": "^17.0.2",
     "sequelize": "^6.6.2",
     "styled-components": "^5.3.0"
   },
