--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/runtime": "^7.14.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -50,6 +51,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^26.6.3",
+    "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
